# HttpServer-rs

./: Cargo.toml  README.md
crates/http-core/: Cargo.toml
crates/http-core/src/: lib.rs  request.rs  response.rs  status.rs
crates/http-router/: Cargo.toml
crates/rin/: Cargo.toml
crates/rin_core/: Cargo.toml
crates/rin_core/src/: context.rs  error.rs  handler.rs  headers.rs  lib.rs  prelude.rs  request.rs  response.rs
crates/rin_http/: Cargo.toml
crates/rin_server/: Cargo.toml
crates/rin_utils/: Cargo.toml
crates/rin_utils/src/: json.rs  lib.rs  query.rs
src/: main.rs
