[package]
name = "HttpServer-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/http-core",
    "crates/http-router",
    "crates/http-server"
]

resolver = "3"

[workspace.dependencies]
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
bytes = "1.10"
thiserror = "1.0"

[dependencies]

http-core = {path = "./crates/http-core"}