[package]
name = "Rin"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/rin_core",
    "crates/rin",
    "crates/rin_utils",
    "crates/rin_http",
    "crates/rin_server",
]

resolver = "3"

[workspace.dependencies]
log = "0.4.27"
bytes = "1.10"
thiserror = "2.0.12"
http = "1.3.1"
async-trait = "0.1.88"
anyhow = "1.0.98"

[dependencies]
rin = {path = "crates/rin"}
