[package]
name = "rin-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
rin_core = { path = "../rin_core" }

log = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = { workspace = true }
tokio = { version = "1.45.0", features = ["io-util", "macros"] }


